--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ const CONFIG = {
   nameA:   "Hi My Love ",
   nameB:   "Channa",
   message: "I know this past few months was little off but I still wanna be with you.\nSo I'm asking with my whole heart what do you say?",
-  yesMsg:  "You've make me happy, I like spending little little moments with you .\nBe prepared to listen to more of my random gyaans and me annoying you with my presence. I promise to be there for you in every moment and make you feel special not just on Valentine's Day but every day. I love you Channa 💖",
+  yesMsg:  "You make me happy, I like spending little little moments with you .\nBe prepared to listen to more of my random gyaans and me annoying you with my presence. I promise to be there for you in every moment and make you feel special not just on Valentine's Day but every day. I love you Channa 💖",
 };
 
 /* ── Apply config ── */
@@ -704,4 +704,5 @@ function launchConfetti(){
 window.addEventListener('resize',()=>{ if(noBtn.style.display!=='none') placeNoBtn(); });
 </script>
 </body>
+
 </html>
